pyroscope (0.3.5) hardy; urgency=low

  * rtcontrol: Added "tagged" field and "--tag" option to set them
  * xmlrpc-c is now checked for 64 bit support when connecting

 -- pyroscope <pyroscope.project@gmail.com>  Mon, 16 Aug 2010 00:36:13 +0200

pyroscope (0.3.4) hardy; urgency=low

  * Note that some new features need special entries in .rtorrent.rc, so read
    http://code.google.com/p/pyroscope/wiki/UserConfiguration before updating
  * chtor: --comment, --bump-date, and --no-date added
  * chtor: dropped --force, and replaced it by --reannounce-all
  * chtor: takes alias names for announe URLs now
  * rtcontrol: added machinery to allow custom field definitions
  * rtcontrol: --help-fields added
  * rtcontrol: interactive mode added (-i, --yes)
  * rtcontrol: --ignore=0|1 added (to set 'ignore commands' flag)
  * rtcontrol: added fields "is_ignored" and "is_active"
  * rtcontrol: added field "directory" (which unlike "path" won't be empty)
  * rtcontrol: --flush added
  * rtcontrol: --delete added
  * rtcontrol: --throttle=NAME and "throttle" field added
  * rtcontrol: added fields "loaded" and "completed"
  * rtcontrol: added timestamp filtering, see RtControlExamples wiki page for details
  * Added support for XMLRPC TCP connections (scgi_port)
  * Added "rtxmlrpc" command

 -- pyroscope <pyroscope.project@gmail.com>  Mon, 16 Aug 2010 00:29:51 +0200

pyroscope (0.3.3) hardy; urgency=low

  * rtcontrol: --nul option added (for use with "xargs")
  * rtcontrol: --hash-check action added (use with care!)
  * lstor: --raw option added
  * chtor: options --no-skip, --force, --clean, --clean-all,
    --clean-rtorrent, --make-private, --make-public, and
    --no-cross-seed added
  * "done", "prio", "is_ghost" fields added
  * rtmv: tool added (not yet implemented)

 -- pyroscope <pyroscope.project@gmail.com>  Sat, 20 Mar 2010 03:27:08 +0100

pyroscope (0.3.2) hardy; urgency=low

  * rtcontrol: Implemented --start, --close, and --dry-run